<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Starting strings -->
    <string name="app_name">Which Character Should You Date??</string>
    <string name="splashText">Loading</string>
    <string name="app_start_screen">Start Screen</string>
    <string name="app_option_screen">Option Screen</string>
   	<string name="des_start">Start</string>
    <string name="des_options">Options</string>
    <string name="des_exit">Exit</string>
    <string name="swipe_viewpager">Swipe left</string>
    <!-- Main Questionnaire strings -->
    <string name="str_next">Next Question</string>
    <string name="title_activity_result">Results</string>
    <string name="save_progress">Save</string>
    <string name="goto_options">Options</string>
    <!-- Option link strings -->
    <string name="try_again_option">Try Again</string>
	<string name="imdb_option">Stalk</string>
	<string name="share_option">Share</string>
	 <!-- Option sounds strings -->
	<string name="musicOptOn">Background Music ON</string>
	<string name="musicOptOff">Background Music OFF</string>
	<string name="soundOptOn">Sounds ON</string>
	<string name="soundOptOff">Sounds OFF</string>
	<string name="save">Save</string>
	<string name="settings">Settings</string>
	<string name="start_questionnaire">Start Questionnaire</string>
	<string name="settings_text">Settings</string>
	<!-- Results strings -->
	<string name="next_button">Next</string>
	
</resources>