<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light1" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/soundOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textOff="@string/soundOptOff"
            android:textOn="@string/soundOptOn" />

        <ToggleButton
            android:id="@+id/musicOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textOff="@string/musicOptOff"
            android:textOn="@string/musicOptOn" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/save"
        android:onClick="save"
        android:src="@android:drawable/ic_menu_save" />

</RelativeLayout>