<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.questionnaireapp.ResultActivity" >

    <!-- Option menu try again option -->
    <item
        android:id="@+id/new_questionnaire"
        android:orderInCategory="100"
        android:title="@string/try_again_option"
        app:showAsAction="never"/>

    <!-- Option menu share option -->

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share_option"
        app:showAsAction="never"/>

    <!-- Option menu go to imdb link option -->

    <item
        android:id="@+id/imdb"
        android:orderInCategory="100"
        android:title="@string/imdb_option"
        app:showAsAction="never"/>

</menu>